fix(terraform): use empty path for client

--- a/scripts/terraform.yaml
+++ b/scripts/terraform.yaml
@@ -31,8 +31,8 @@ settings:
 
     client:
       type: static
-      path: /
-      uptimePath: /
+      path: ""
+      uptimePath: ""
 
     www:
       type: static
