--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "generate": "npm-run-all generate:server generate:client ",
     "generate:client": "if [ ${taito_env} = 'local' ] && [ -f ./client/generate.sh ]; then (cd client && ./generate.sh); else echo Nothing to generate; fi",
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
-    "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
-    "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
+    "info:local": "yes | taito ${taito_options} secret show:${taito_env} && npm run show-users",
+    "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth && npm run show-users",
+    "show-users": "echo Users: && echo - TODO user / password",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
     "lint:admin": "cd admin && npm-run-all lint",
     "lint:client": "cd client && npm-run-all lint",
