--- a/server/package.json
+++ b/server/package.json
@@ -27,9 +27,11 @@
     "bunyan": "1.8.15",
     "class-validator": "0.13.1",
     "graphql": "15.5.1",
+    "jwks-rsa": "^2.0.4",
     "koa": "2.13.1",
     "koa-joi-router": "8.0.0",
     "koa-qs": "3.0.0",
+    "koa-jwt": "^4.0.3",
     "mustache": "4.2.0",
     "pg-promise": "10.10.2",
     "reflect-metadata": "0.1.13",
