--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js",
-    "generate:test-gql": "rm -rf ./test/graphql/generated/* && gqlg --schemaFilePath ./shared/schema.gql --destDirPath ./test/graphql/generated",
+    "generate:test-gql": "rm -rf ./test/graphql/generated/* && gqlg --schemaFilePath ./shared/schema.gql --destDirPath ./test/graphql/generated --depthLimit 4",
     "generate:test-sdk": "graphql-codegen --config codegen.yml"
   },
   "_comment1": "You may want to remove @sentry/node if you don't use Sentry",
@@ -72,7 +72,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "5.1.0",
-    "gqlg": "1.0.2",
+    "gql-generator": "https://github.com/TaitoUnited/gql-generator/archive/refs/tags/v2.1.0-taito.tar.gz",
     "jest": "27.0.5",
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
