--- a/client/package.json
+++ b/client/package.json
@@ -60,7 +60,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.1.3",
     "@lingui/cli": "3.10.2",
     "@lingui/loader": "3.10.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
     "@storybook/addon-actions": "6.3.8",
     "@storybook/addon-essentials": "6.3.8",
     "@storybook/addon-links": "6.3.8",
@@ -105,8 +105,8 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "5.0.2",
-    "fork-ts-checker-webpack-plugin": "6.3.3",
-    "html-webpack-plugin": "5.3.2",
+    "fork-ts-checker-webpack-plugin": "6.5.0",
+    "html-webpack-plugin": "5.5.0",
     "jest": "27.1.0",
     "lodash-webpack-plugin": "0.11.6",
     "mini-css-extract-plugin": "2.2.2",
@@ -117,11 +117,11 @@
     "storybook-dark-mode": "1.0.8",
     "style-loader": "3.2.1",
     "typescript": "4.4.2",
-    "webpack": "5.52.0",
-    "webpack-bundle-analyzer": "4.4.2",
-    "webpack-cli": "4.9.0",
-    "webpack-dev-server": "4.1.0",
-    "workbox-webpack-plugin": "6.2.4"
+    "webpack": "5.65.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.7.2",
+    "workbox-webpack-plugin": "6.4.2"
   },
   "lingui": {
     "locales": [
