--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "@lingui/loader": "3.10.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.4",
     "@storybook/addon-actions": "6.3.8",
+    "@storybook/addon-docs": "6.3.8",
     "@storybook/addon-essentials": "6.3.8",
     "@storybook/addon-links": "6.3.8",
     "@storybook/addons": "6.3.8",
