--- a/package.json
+++ b/package.json
@@ -154,11 +154,11 @@
     "url": "git+https://github.com/TaitoUnited/full-stack-template.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "git-branch-is": "^4.0.0",
-    "husky": "^7.0.4",
-    "npm-run-all": "^4.1.5",
-    "semantic-release": "^18.0.0"
+    "@commitlint/cli": "~16.1.0",
+    "@commitlint/config-conventional": "~16.0.0",
+    "git-branch-is": "~4.0.0",
+    "husky": "~7.0.4",
+    "npm-run-all": "~4.1.5",
+    "semantic-release": "~19.0.2"
   }
 }
