--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js",
-    "generate:test-gql": "rm -rf ./test/graphql/generated/* && gqlg --schemaFilePath ./shared/schema.gql --destDirPath ./test/graphql/generated --depthLimit 4",
+    "generate:test-gql": "rm -rf ./test/graphql/generated/* && gqlg --schemaFilePath ./shared/schema.gql --destDirPath ./test/graphql/generated --depthLimit 8",
     "generate:test-sdk": "graphql-codegen --config codegen.yml"
   },
   "_comment1": "You may want to remove @sentry/node if you don't use Sentry",
@@ -19,64 +19,64 @@
   "_comment3": "Required by REST API docs only: mustache, showdown",
   "_comment4": "Required by GraphQL API only: apollo-server-koa, graphql, type-graphql",
   "dependencies": {
-    "@hapi/boom": "9.1.2",
-    "@sentry/node": "6.7.2",
-    "apollo-server-koa": "2.25.1",
-    "aws-sdk": "2.932.0",
-    "axios": "0.21.1",
-    "bunyan": "1.8.15",
-    "class-validator": "0.13.1",
-    "graphql": "15.5.1",
-    "koa": "2.13.1",
-    "koa-joi-router": "8.0.0",
-    "koa-qs": "3.0.0",
-    "mustache": "4.2.0",
-    "pg-promise": "10.10.2",
+    "@hapi/boom": "~9.1.4",
+    "@sentry/node": "~6.17.3",
+    "apollo-server-koa": "~2.25.1",
+    "aws-sdk": "~2.1066.0",
+    "axios": "0.25.0",
+    "bunyan": "~1.8.15",
+    "class-validator": "~0.13.2",
+    "graphql": "~15.8.0",
+    "koa": "~2.13.4",
+    "koa-joi-router": "~8.0.0",
+    "koa-qs": "~3.0.0",
+    "mustache": "~4.2.0",
+    "pg-promise": "~10.11.1",
     "reflect-metadata": "0.1.13",
-    "serverless-http": "2.7.0",
-    "showdown": "1.9.1",
+    "serverless-http": "~2.7.0",
+    "showdown": "~1.9.1",
     "stack-trace": "0.0.10",
-    "type-graphql": "1.1.1",
+    "type-graphql": "~1.1.1",
     "typedi": "0.10.0",
-    "uuid": "8.3.2"
+    "uuid": "~8.3.2"
   },
   "resolutions": {
-    "qs": "6.3.2"
+    "qs": "~6.3.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.5",
-    "@graphql-codegen/introspection": "1.18.2",
-    "@graphql-codegen/typescript": "1.22.3",
-    "@graphql-codegen/typescript-graphql-request": "3.2.3",
-    "@graphql-codegen/typescript-operations": "1.18.2",
-    "@graphql-codegen/typescript-resolvers": "1.19.4",
-    "@types/bunyan": "1.8.6",
-    "@types/jest": "26.0.23",
-    "@types/joi": "17.2.3",
-    "@types/koa": "2.13.3",
-    "@types/koa-joi-router": "8.0.0",
-    "@types/koa-qs": "2.0.0",
-    "@types/koa-router": "7.4.2",
-    "@types/mustache": "4.1.1",
-    "@types/node": "15.12.4",
-    "@types/pg": "8.6.0",
-    "@types/showdown": "1.9.3",
+    "@graphql-codegen/cli": "~2.4.0",
+    "@graphql-codegen/introspection": "~2.1.1",
+    "@graphql-codegen/typescript": "~2.4.2",
+    "@graphql-codegen/typescript-graphql-request": "~4.3.3",
+    "@graphql-codegen/typescript-operations": "~2.2.2",
+    "@graphql-codegen/typescript-resolvers": "~2.4.3",
+    "@types/bunyan": "~1.8.8",
+    "@types/jest": "~27.4.0",
+    "@types/joi": "~17.2.3",
+    "@types/koa": "~2.13.4",
+    "@types/koa-joi-router": "~8.0.4",
+    "@types/koa-qs": "~2.0.0",
+    "@types/koa-router": "~7.4.4",
+    "@types/mustache": "~4.1.2",
+    "@types/node": "~17.0.13",
+    "@types/pg": "~8.6.4",
+    "@types/showdown": "~1.9.4",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
-    "eslint": "7.29.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-promise": "5.1.0",
+    "@types/uuid": "~8.3.4",
+    "@typescript-eslint/eslint-plugin": "~5.10.1",
+    "@typescript-eslint/parser": "~5.10.1",
+    "eslint": "~7.32.0",
+    "eslint-config-prettier": "~8.3.0",
+    "eslint-config-standard": "~16.0.3",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-prettier": "~3.4.1",
+    "eslint-plugin-promise": "~5.2.0",
     "gql-generator": "https://github.com/TaitoUnited/gql-generator/archive/refs/tags/v2.1.0-taito.tar.gz",
-    "jest": "27.0.5",
-    "prettier": "2.3.1",
-    "ts-jest": "27.0.3",
-    "ts-node-dev": "1.1.6",
-    "typescript": "4.3.4"
+    "jest": "~27.4.7",
+    "prettier": "~2.5.1",
+    "ts-jest": "~27.1.3",
+    "ts-node-dev": "~1.1.8",
+    "typescript": "~4.5.5"
   }
 }
