chore: run lint on host

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
-    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
-    "lint:admin": "cd admin && npm-run-all lint",
-    "lint:client": "cd client && npm-run-all lint",
-    "lint:server": "cd server && npm-run-all lint",
-    "lint:worker": "cd worker && npm-run-all lint",
-    "lint:www": "cd www && npm-run-all lint",
+    "taito-host-lint": "echo Running lint locally && npm-run-all --parallel taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
+    "taito-host-lint:admin": "cd admin && npm-run-all lint",
+    "taito-host-lint:client": "cd client && npm-run-all lint",
+    "taito-host-lint:server": "cd server && npm-run-all lint",
+    "taito-host-lint:worker": "cd worker && npm-run-all lint",
+    "taito-host-lint:www": "cd www && npm-run-all lint",
     "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker unit:www ",
     "unit:admin": "cd admin && npm-run-all unit",
     "unit:client": "cd client && npm-run-all unit",
@@ -65,7 +65,7 @@
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "husky:commit-msg": "commitlint --edit",
     "husky:pre-commit": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all precommit:branch precommit:lint; fi",
-    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate lint unit; fi",
+    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate taito-host-lint unit; fi",
     "release-pre:prod": "semantic-release --dry-run",
     "release-post:prod": "semantic-release --no-ci"
   },
