--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "generate:server": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate.sh ]; then (cd server && ./generate.sh); else echo Nothing to generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
-    "taito-host-lint": "echo Running lint locally && npm-run-all --parallel taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
+    "taito-host-lint": "echo Running lint locally && npm-run-all -p -c taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
     "taito-host-lint:admin": "cd admin && npm-run-all lint",
     "taito-host-lint:client": "cd client && npm-run-all lint",
     "taito-host-lint:server": "cd server && npm-run-all lint",
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
-    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker unit:www ",
+    "unit": "echo Running unit tests locally && npm-run-all -p -c unit:admin unit:client unit:server unit:worker unit:www ",
     "unit:admin": "cd admin && npm-run-all unit",
     "unit:client": "cd client && npm-run-all unit",
     "unit:server": "cd server && npm-run-all unit",
