chore: autoformat yaml files

--- a/cloudbuild-template.yaml
+++ b/cloudbuild-template.yaml
@@ -49,75 +49,74 @@ substitutions:
   _TEMPLATE_DEFAULT_POSTGRES_MASTER_PASSWORD_HINT:
 
 steps:
-
-- id: all
-  name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  env:
-    - taito_mode=ci
-    - taito_ci_phases=${_TAITO_CI_PHASES}
-    - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
-    - template_default_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
-    - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
-    - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
-    - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
-    - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
-    - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
-    - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
-    - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
-    - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
-    - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
-    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
-    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
-    - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
-    - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
-    - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
-    - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
-    - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
-    - template_default_provider_zone_prod=${_TEMPLATE_DEFAULT_PROVIDER_ZONE_PROD}
-    - template_default_uptime_channels_prod=${_TEMPLATE_DEFAULT_UPTIME_CHANNELS_PROD}
-    - template_default_ci_provider=${_TEMPLATE_DEFAULT_CI_PROVIDER}
-    - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
-    - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
-    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
-    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
-    - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
-    - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
-    - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
-    - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
-    - template_default_postgres_host=${_TEMPLATE_DEFAULT_POSTGRES_HOST}
-    - template_default_postgres_host_prod=${_TEMPLATE_DEFAULT_POSTGRES_HOST_PROD}
-    - template_default_postgres_port=${_TEMPLATE_DEFAULT_POSTGRES_PORT}
-    - template_default_postgres_port_prod=${_TEMPLATE_DEFAULT_POSTGRES_PORT_PROD}
-    - template_default_postgres_ssl_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_ENABLED}
-    - template_default_postgres_ssl_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_ENABLED_PROD}
-    - template_default_postgres_ssl_client_cert_enabled_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_CLIENT_CERT_ENABLED}
-    - template_default_postgres_ssl_client_cert_enabled_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_CLIENT_CERT_ENABLED_PROD}
-    - template_default_postgres_ssl_server_cert_enabled_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_SERVER_CERT_ENABLED}
-    - template_default_postgres_ssl_server_cert_enabled_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_SERVER_CERT_ENABLED_PROD}
-    - template_default_postgres_proxy_ssl_enabled=${_TEMPLATE_DEFAULT_POSTGRES_PROXY_SSL_ENABLED}
-    - template_default_postgres_proxy_ssl_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_PROXY_SSL_ENABLED_PROD}
-    - template_default_postgres_master_username=${_TEMPLATE_DEFAULT_POSTGRES_MASTER_USERNAME}
-    - template_default_postgres_master_password_hint=${_TEMPLATE_DEFAULT_POSTGRES_MASTER_PASSWORD_HINT}
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    sed -i 's/oldRewritePolicy: false/oldRewritePolicy: true/' scripts/helm.yaml
-    sed -i 's/version:.*/version: 0.9.0/' scripts/helm/requirements.yaml
-    taito build prepare:$BRANCH_NAME $COMMIT_SHA
-    taito artifact prepare:admin:$BRANCH_NAME $COMMIT_SHA
-    taito artifact prepare:client:$BRANCH_NAME $COMMIT_SHA
-    taito artifact prepare:server:$BRANCH_NAME $COMMIT_SHA
-    taito artifact prepare:worker:$BRANCH_NAME $COMMIT_SHA
-    taito artifact prepare:www:$BRANCH_NAME $COMMIT_SHA
-    taito db deploy:$BRANCH_NAME
-    taito deployment deploy:$BRANCH_NAME $COMMIT_SHA
-    taito deployment wait:$BRANCH_NAME
-    taito test:$BRANCH_NAME
-    taito deployment verify:$BRANCH_NAME
-    taito artifact release:admin:$BRANCH_NAME $COMMIT_SHA
-    taito artifact release:client:$BRANCH_NAME $COMMIT_SHA
-    taito artifact release:server:$BRANCH_NAME $COMMIT_SHA
-    taito artifact release:worker:$BRANCH_NAME $COMMIT_SHA
-    taito artifact release:www:$BRANCH_NAME $COMMIT_SHA
-    taito build release:$BRANCH_NAME
+  - id: all
+    name: "${_TEMPLATE_DEFAULT_TAITO_IMAGE}"
+    env:
+      - taito_mode=ci
+      - taito_ci_phases=${_TAITO_CI_PHASES}
+      - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
+      - template_default_environments=${_TEMPLATE_DEFAULT_ENVIRONMENTS}
+      - template_default_organization=${_TEMPLATE_DEFAULT_ORGANIZATION}
+      - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
+      - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
+      - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+      - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
+      - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
+      - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
+      - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
+      - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
+      - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+      - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
+      - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+      - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
+      - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
+      - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
+      - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
+      - template_default_provider_zone_prod=${_TEMPLATE_DEFAULT_PROVIDER_ZONE_PROD}
+      - template_default_uptime_channels_prod=${_TEMPLATE_DEFAULT_UPTIME_CHANNELS_PROD}
+      - template_default_ci_provider=${_TEMPLATE_DEFAULT_CI_PROVIDER}
+      - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
+      - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
+      - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+      - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
+      - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
+      - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
+      - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+      - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
+      - template_default_postgres_host=${_TEMPLATE_DEFAULT_POSTGRES_HOST}
+      - template_default_postgres_host_prod=${_TEMPLATE_DEFAULT_POSTGRES_HOST_PROD}
+      - template_default_postgres_port=${_TEMPLATE_DEFAULT_POSTGRES_PORT}
+      - template_default_postgres_port_prod=${_TEMPLATE_DEFAULT_POSTGRES_PORT_PROD}
+      - template_default_postgres_ssl_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_ENABLED}
+      - template_default_postgres_ssl_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_ENABLED_PROD}
+      - template_default_postgres_ssl_client_cert_enabled_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_CLIENT_CERT_ENABLED}
+      - template_default_postgres_ssl_client_cert_enabled_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_CLIENT_CERT_ENABLED_PROD}
+      - template_default_postgres_ssl_server_cert_enabled_enabled=${_TEMPLATE_DEFAULT_POSTGRES_SSL_SERVER_CERT_ENABLED}
+      - template_default_postgres_ssl_server_cert_enabled_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_SSL_SERVER_CERT_ENABLED_PROD}
+      - template_default_postgres_proxy_ssl_enabled=${_TEMPLATE_DEFAULT_POSTGRES_PROXY_SSL_ENABLED}
+      - template_default_postgres_proxy_ssl_enabled_prod=${_TEMPLATE_DEFAULT_POSTGRES_PROXY_SSL_ENABLED_PROD}
+      - template_default_postgres_master_username=${_TEMPLATE_DEFAULT_POSTGRES_MASTER_USERNAME}
+      - template_default_postgres_master_password_hint=${_TEMPLATE_DEFAULT_POSTGRES_MASTER_PASSWORD_HINT}
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        sed -i 's/oldRewritePolicy: false/oldRewritePolicy: true/' scripts/helm.yaml
+        sed -i 's/version:.*/version: 0.9.0/' scripts/helm/requirements.yaml
+        taito build prepare:$BRANCH_NAME $COMMIT_SHA
+        taito artifact prepare:admin:$BRANCH_NAME $COMMIT_SHA
+        taito artifact prepare:client:$BRANCH_NAME $COMMIT_SHA
+        taito artifact prepare:server:$BRANCH_NAME $COMMIT_SHA
+        taito artifact prepare:worker:$BRANCH_NAME $COMMIT_SHA
+        taito artifact prepare:www:$BRANCH_NAME $COMMIT_SHA
+        taito db deploy:$BRANCH_NAME
+        taito deployment deploy:$BRANCH_NAME $COMMIT_SHA
+        taito deployment wait:$BRANCH_NAME
+        taito test:$BRANCH_NAME
+        taito deployment verify:$BRANCH_NAME
+        taito artifact release:admin:$BRANCH_NAME $COMMIT_SHA
+        taito artifact release:client:$BRANCH_NAME $COMMIT_SHA
+        taito artifact release:server:$BRANCH_NAME $COMMIT_SHA
+        taito artifact release:worker:$BRANCH_NAME $COMMIT_SHA
+        taito artifact release:www:$BRANCH_NAME $COMMIT_SHA
+        taito build release:$BRANCH_NAME
