--- a/scripts/terraform.yaml
+++ b/scripts/terraform.yaml
@@ -56,7 +56,7 @@ settings:
       env:
         # Paths and bind
         BASE_PATH: /api
-        RUN_AS_FUNCTION: 'true'
+        RUN_AS_FUNCTION: "true"
         SECRET_NAME_PATH: ${taito_secret_name_path}
         SECRET_REGION: ${taito_provider_region}
         # Common variables
@@ -64,31 +64,31 @@ settings:
         COMMON_LOG_LEVEL: info
         # Services
         SENTRY_DSN: #sentryDSN
-        DATABASE_HOST: '${db_database_real_host}'
-        DATABASE_PORT: '${db_database_real_port}'
+        DATABASE_HOST: "${db_database_real_host}"
+        DATABASE_PORT: "${db_database_real_port}"
         DATABASE_SSL_ENABLED: "${db_database_ssl_enabled}"
         DATABASE_SSL_SERVER_CERT_ENABLED: "${db_database_ssl_server_cert_enabled}"
         DATABASE_NAME: ${db_database_name}
         DATABASE_USER: ${db_database_app_username}
-        DATABASE_POOL_MIN: '5'
-        DATABASE_POOL_MAX: '10'
+        DATABASE_POOL_MIN: "5"
+        DATABASE_POOL_MAX: "10"
         REDIS_HOST: ${taito_random_name}-${taito_env}-001.${taito_random_name}-${taito_env}.nde1c2.use1.cache.amazonaws.com
         REDIS_PORT: 6379
         BUCKET_BUCKET: ${st_bucket_name}
         BUCKET_REGION: ${taito_provider_region}
       awsPolicy:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           # Allow bucket access
           - Effect: Allow
             Action:
               - s3:ListBucket
-            Resource: 'arn:aws:s3:::${st_bucket_name}'
+            Resource: "arn:aws:s3:::${st_bucket_name}"
           - Effect: Allow
             Action:
               - s3:GetObject
               - s3:PutObject
-            Resource: 'arn:aws:s3:::${st_bucket_name}/*'
+            Resource: "arn:aws:s3:::${st_bucket_name}/*"
 
     redis:
       type: redis
@@ -117,7 +117,7 @@ settings:
       backupLock:
       # Cors
       corsRules:
-        - allowedOrigins: [ "https://${taito_domain}" ]
+        - allowedOrigins: ["https://${taito_domain}"]
       # User rights # For GCP
       admins: # For GCP
         - id: serviceAccount:${taito_project}-${taito_env}-storage@${taito_resource_namespace_id}.iam.gserviceaccount.com # For GCP
