fix: dev storage bucket cors rules

--- a/scripts/terraform-dev.yaml
+++ b/scripts/terraform-dev.yaml
@@ -3,7 +3,8 @@
 settings:
   services:
     bucket:
-      cors:
-        - origin: https://${taito_domain}
-        - origin: http://localhost:9999
+      corsRules:
+        - allowedOrigins:
+            - https://${taito_domain}
+            - http://localhost:9999
 # END
